--- a/Cargo.toml
+++ b/Cargo.toml
@@ -351,6 +351,9 @@ version = "0.3.4"
 [workspace.dependencies.http]
 version = "1.3.1"
 
+[workspace.dependencies.humantime]
+version = "2.2.0"
+
 [workspace.dependencies.hyper]
 version = "1.6.0"
 features = ["full"]
