--- a/server/libraries/td-supervisor/Cargo.toml
+++ b/server/libraries/td-supervisor/Cargo.toml
@@ -79,6 +79,7 @@ dirs = { workspace = true }
 futures = { workspace = true }
 getset = { workspace = true }
 http = { workspace = true }
+humantime = { workspace = true }
 indicatif = { workspace = true }
 ignore = { workspace = true }
 include_dir = { workspace = true }
