[TD-483] Remove strum_macros crate in favor of strum derive feature (#401)

--- a/extensions/rust/te-execution/Cargo.toml
+++ b/extensions/rust/te-execution/Cargo.toml
@@ -42,8 +42,7 @@ td-objects = { workspace = true }
 async-trait = { workspace = true }
 petgraph = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
-strum = { workspace = true }
-strum_macros = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 
 # Development dependencies
 
