--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -89,7 +89,7 @@ test_tower_metadata = ["td-tower/test_tower_metadata"]
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "clap_derive", "getset", "http", "paste", "serde", "serde_json", "strum", "strum_macros", "toml", "utoipa-axum"]
+ignored = ["openssl", "clap_derive", "getset", "http", "paste", "serde", "serde_json", "strum", "toml", "utoipa-axum"]
 
 # Build dependencies
 
@@ -132,7 +132,7 @@ td-tower = { workspace = true }
 
 axum = { workspace = true, features = ["macros"] }
 clap = { workspace = true, features = ["derive"] }
-clap_derive = { workspace = true}
+clap_derive = { workspace = true }
 colored = { workspace = true }
 getset = { workspace = true }
 http = { workspace = true }
@@ -141,8 +141,7 @@ path-slash = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-strum = { workspace = true }
-strum_macros = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 supports-color = { workspace = true }
 textwrap = { workspace = true }
 terminal_size = { workspace = true }
