--- a/expansions/polars/modules/ty-tableframe/Cargo.toml
+++ b/expansions/polars/modules/ty-tableframe/Cargo.toml
@@ -31,7 +31,7 @@ dummy = []
 extension-module = ["pyo3/extension-module"]
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum_macros", "td-build", "td-common", "td-error", "ta-tableframe", "te-tableframe", "thiserror", "toml", "polars-arrow"]
+ignored = ["openssl", "td-build", "td-common", "td-error", "ta-tableframe", "te-tableframe", "thiserror", "toml", "polars-arrow"]
 
 # Build dependencies
 
