--- a/server/libraries/td-execution/Cargo.toml
+++ b/server/libraries/td-execution/Cargo.toml
@@ -28,7 +28,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum", "strum_macros", "thiserror"]
+ignored = ["openssl", "strum", "thiserror"]
 
 # Build dependencies
 
@@ -60,8 +60,7 @@ futures = { workspace = true }
 itertools = { workspace = true }
 petgraph = { workspace = true }
 sqlx = { workspace = true }
-strum = { workspace = true }
-strum_macros = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 
