--- a/server/libraries/td-python/Cargo.toml
+++ b/server/libraries/td-python/Cargo.toml
@@ -28,7 +28,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum_macros", "td-build", "thiserror", "toml"]
+ignored = ["openssl", "td-build", "thiserror", "strum", "toml"]
 
 # Build dependencies
 
@@ -52,7 +52,7 @@ td-error = { workspace = true }
 
 rand = { workspace = true }
 semver = { workspace = true }
-strum_macros = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 
