--- a/server/libraries/td-security/Cargo.toml
+++ b/server/libraries/td-security/Cargo.toml
@@ -28,7 +28,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum_macros", "td-build", "thiserror", "toml"]
+ignored = ["openssl", "td-build", "thiserror", "strum", "toml"]
 
 # Build dependencies
 
@@ -54,7 +54,7 @@ argon2 = { workspace = true }
 derive_builder = { workspace = true }
 getset = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
-strum_macros = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
