--- a/server/libraries/td-shuttle/Cargo.toml
+++ b/server/libraries/td-shuttle/Cargo.toml
@@ -30,7 +30,7 @@ test_logging = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum", "strum_macros", "toml", "td-build", "tm-workspace"]
+ignored = ["openssl", "strum", "toml", "td-build", "tm-workspace"]
 
 # Build dependencies
 
@@ -76,8 +76,7 @@ reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
-strum = { workspace = true }
-strum_macros = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 testdir = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
