--- a/server/libraries/td-storage/Cargo.toml
+++ b/server/libraries/td-storage/Cargo.toml
@@ -28,7 +28,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum_macros", "td-build", "thiserror", "toml"]
+ignored = ["openssl", "td-build", "thiserror", "toml"]
 
 # Build dependencies
 
@@ -63,7 +63,7 @@ object_store = { workspace = true, features = ["aws", "azure", "gcp", "http"] }
 regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-strum_macros = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 testdir = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
