--- a/server/libraries/td-tableframe/Cargo.toml
+++ b/server/libraries/td-tableframe/Cargo.toml
@@ -30,7 +30,7 @@ test_logging = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum", "strum_macros", "toml", "td-build", "tm-workspace"]
+ignored = ["openssl", "strum", "toml", "td-build", "tm-workspace"]
 
 # Build dependencies
 
@@ -64,8 +64,7 @@ ta-tableframe = { workspace = true }
 # External dependencies
 
 polars = { workspace = true, features = ["lazy"] }
-strum = { workspace = true }
-strum_macros = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
 ta-tableframe = { workspace = true, features = ["td-test"] }
