--- a/server/libraries/td-test/Cargo.toml
+++ b/server/libraries/td-test/Cargo.toml
@@ -28,7 +28,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum_macros", "td-build", "thiserror", "tokio", "toml"]
+ignored = ["openssl", "td-build", "thiserror", "tokio", "toml"]
 
 # Build dependencies
 
