--- a/server/libraries/td-tower/Cargo.toml
+++ b/server/libraries/td-tower/Cargo.toml
@@ -28,7 +28,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum_macros", "serde_json", "td-build", "thiserror", "utoipa", "toml"]
+ignored = ["openssl", "serde_json", "td-build", "thiserror", "utoipa", "strum", "toml"]
 
 # Build dependencies
 
@@ -62,7 +62,7 @@ getset = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sqlx = { workspace = true }
-strum_macros = { workspace = true }
+strum = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tower = { workspace = true }
