--- a/server/libraries/td-services/Cargo.toml
+++ b/server/libraries/td-services/Cargo.toml
@@ -81,6 +81,7 @@ itertools = { workspace = true }
 jsonwebtoken = { workspace = true }
 polars = { workspace = true }
 serde = { workspace = true }
+serde_yaml = { workspace = true }
 sha2 = { workspace = true }
 sqlx = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
