[TD-491] Generate server.yaml file with relevant versions and metadata to be consumed by apiserver endpoints & cli (#410)

--- a/server/binaries/td-server/resources/profiles/external/dummy/workspace/config/config.yaml
+++ b/server/binaries/td-server/resources/profiles/external/dummy/workspace/config/config.yaml
@@ -22,7 +22,9 @@ controllers:
         program: _tduvinfo
         parameters:
           - output: versions
-          - file: ${TD_PATH_INSTANCE}/workspace/work/etc/pyversions.dat
+          - file: ${TD_PATH_INSTANCE}/workspace/work/etc/server.yaml
+          - allowed_python_versions: allowed-py.yaml
+          - allowed_packages_versions: allowed-pkg.yaml
       - name: apiserver-configuration-resolver
         kind: processor
         location: system
