--- a/Maketask.toml
+++ b/Maketask.toml
@@ -88,9 +88,6 @@ script = [
     info "🧹️ Cleaning..."
     cm_run_task clean
 
-    info "⚙️ Building..."
-    cm_run_task build
-
     info "🏕️ Installing..."
     cm_run_task install
 
@@ -704,11 +701,13 @@ cwd = "${PROJECT_TABSDATA_ROOT_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
+    !include_files ./make/libraries/log.ds
+
     exists = is_path_exists ./variant/devutils/automation/tasks/makers/td-scripts/repositories_sourcetrack.py
     if eq ${exists} true
         exec --fail-on-error python ./variant/devutils/automation/tasks/makers/td-scripts/repositories_sourcetrack.py
     else
-        echo "Generating source track metadata file does not apply for this project"
+        warn "Generating the source track metadata file does not apply for this project"
     end
     ''']
 
@@ -1152,7 +1151,7 @@ script = [
     ''']
 
 [tasks.assembly]
-dependencies = ["build"]
+dependencies = ["build", "sourcetrack"]
 run_task = [
     { name = [
         "assembly_rs",
