[TD-500] Disable double run of init tasks in cargo make on failure (#418)

--- a/make/fragments/hooks/init.toml
+++ b/make/fragments/hooks/init.toml
@@ -10,6 +10,42 @@ script = [
 
     cm_run_task splash
 
+    os = os_family
+    info "🏈 Current os: ${os}"
+    if eq ${os} "windows"
+        temp = temp_dir
+        marker = join_path ${temp} .td.make
+        exists = is_path_exists ${marker}
+        info "🍐 The marker temp file is ${marker}"
+        if ${exists}
+            info "🍅 Marker for make exsits. Skipping setup."
+            ok = rm ${marker}
+            exit 0
+        end
+        info "🍏 Marker for make does not exist. Resuming setup."
+        ok = touch ${marker}
+    else
+        pid = pid
+        info "🏀 Current proces id: ${pid}"
+        output = exec ps -o ppid= -p ${pid}
+        ppid = trim ${output.stdout}
+        info "🥎 Parent process id: ${ppid}"
+        temp = temp_dir
+        pid_marker = join_path ${temp} .td.pid.${pid}
+        ppid_marker = join_path ${temp} .td.pid.${ppid}
+        info "🍊 The pid temp file is ${pid_marker}"
+        info "🍋 The ppid temp file is ${ppid_marker}"
+        exists = is_path_exists ${pid_marker}
+        if ${exists}
+            info "🍅 Marker for pid exsits. Skipping setup."
+            ok = rm ${marker}
+            exit 0
+        end
+        info "🍏 Marker for pid does not exist. Resuming setup."
+        ok = touch ${ppid_marker}
+    end
+
+    echo ""
     user_home = get_env HOME
     info "🏠 User HOME: ${HOME}"
     echo ""
