--- a/server/binaries/td-server/resources/profiles/external/dummy/workspace/config/config.yaml
+++ b/server/binaries/td-server/resources/profiles/external/dummy/workspace/config/config.yaml
@@ -2,6 +2,34 @@
 # Copyright 2024 Tabs Data Inc.
 #
 
+# Modes of arguments-passing to workers:
+#
+# parameters: Arguments to pass directly to the process. The values are provided
+#             explicitly and support resolution of environment variables within
+#             them.
+#
+# inherit...: Arguments to pass to the process. The values are derived from the
+#             value passed to the same argument in the parent process, allowing
+#             inheritance across process chains.
+#
+# arguments.: Arguments to pass to the process. The values are automatically
+#             generated using an internal algorithm based on reserved keywords.
+#
+# markers...: Arguments to pass to the process. For ephemeral workers, the
+#             process is wrapped in a system shell script. As a result, all the
+#             argument types above are embedded directly into the script, not
+#             passed as command-line arguments.
+#             Marker values, however, are passed as direct arguments to the
+#             script itself, and are also generated using an internal algorithm
+#             based on reserved keywords. These values ar normally used to tag
+#             processes for easier tracking.
+#
+# get-state.: Arguments to pass to the process. The values are generated from an
+#             internal key-value map, which is populated by workers that use the
+#             'set-state' attribute. These arguments are not passed via the
+#             command line, but instead are delivered through the process’s
+#             standard input (stdin).
+
 name: tabsdata
 controllers:
   init:
@@ -19,7 +47,7 @@ controllers:
       - name: uvinfo
         kind: processor
         location: system
-        program: _tduvinfo
+        program: tduvinfo
         parameters:
           - output: versions
           - file: ${TD_PATH_INSTANCE}/workspace/work/etc/server.yaml
@@ -28,7 +56,7 @@ controllers:
       - name: apiserver-configuration-resolver
         kind: processor
         location: system
-        program: _tdcfgrsv
+        program: tdcfgrsv
         parameters:
           - input: ${TD_PATH_CONFIG}/proc/regular/apiserver/config/config.yaml
           - strategies: env,hashicorp
@@ -44,24 +72,13 @@ controllers:
       - name: apiserver-mounts-options-extractor
         kind: processor
         location: system
-        program: _tdmntext
+        program: tdmntext
         get-states:
           - state-type: blob
             state-key: apiserver-configuration
         set-state:
           state-type: map
           state-key: apiserver-mounts-options
-      - name: janitor
-        kind: processor
-        location: system
-        program: janitor
-        parameters:
-          - instance: ${TD_PATH_INSTANCE}
-          - frequency: 900 # 15 minutes (seconds)
-          - retention: 10800000 # 3 hours (milliseconds)
-          - limit: 32
-        arguments:
-          - logs-folder
   regular:
     concurrency: 0
     workers:
@@ -72,10 +89,20 @@ controllers:
         parameters:
           - stdin-config: true
           - database-url: file://${TD_URI_REPOSITORY}/database/tabsdata.db
-          - storage-url: file://${TD_URI_REPOSITORY}/storage
         get-states:
           - state-type: blob
             state-key: apiserver-configuration
+      - name: janitor
+        kind: processor
+        location: system
+        program: janitor
+        parameters:
+          - instance: ${TD_PATH_INSTANCE}
+          - frequency: 900 # 15 minutes (seconds)
+          - retention: 86400000 # 3 days (milliseconds)
+          - limit: 32
+        arguments:
+          - logs-folder
       - name: p01
         kind: processor
         location: relative
@@ -125,6 +152,11 @@ controllers:
           - input-folder
           - output-folder
           - current-instance
+        markers:
+          - td-collection
+          - td-function
+          - td-worker
+          - td-attempt
         get-states:
           - state-type: map
             state-key: apiserver-mounts-options
