--- a/server/libraries/td-apiserver/Cargo.toml
+++ b/server/libraries/td-apiserver/Cargo.toml
@@ -60,6 +60,7 @@ td-build = { workspace = true }
 td-common = { workspace = true }
 td-database = { workspace = true }
 td-objects = { workspace = true }
+td-process = { workspace = true }
 td-security = { workspace = true }
 td-services = { workspace = true }
 td-storage = { workspace = true }
