--- a/server/libraries/td-process/Cargo.toml
+++ b/server/libraries/td-process/Cargo.toml
@@ -3,9 +3,8 @@
 #
 
 [package]
-description = "Tabsdata In/Out Data Mover"
-name = "td-shuttle"
-build = "build.rs"
+description = "Tabsdata Process Tools"
+name = "td-process"
 
 authors = { workspace = true }
 edition = { workspace = true }
@@ -20,17 +19,16 @@ version = { workspace = true }
 [lib]
 
 [features]
-api-docs = []
 enterprise = []
 td-test = ["dummy", "mock-env", "test-utils"]
 dummy = []
 mock-env = []
-sqlx_log = []
 test_logging = []
+test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "strum", "toml", "td-build", "tm-workspace"]
+ignored = ["openssl", "td-build", "thiserror", "strum", "toml"]
 
 # Build dependencies
 
@@ -38,56 +36,35 @@ ignored = ["openssl", "strum", "toml", "td-build", "tm-workspace"]
 
 # Internal dependencies
 
-td-build = { workspace = true }
-
-# External dependencies
-
-toml = { workspace = true }
-
 [dependencies]
 
 # Internal dependencies
 
+## Libraries
+
+td-build = { workspace = true }
+td-common = { workspace = true }
+    td-objects = { workspace = true }
 
 ## Macros
 
-td-build = { workspace = true }
-tm-workspace = { workspace = true }
-
-## Libraries
-
-td-common = { workspace = true }
-td-error = { workspace = true }
-td-process = { workspace = true }
-
-## Extensions
-
 # External dependencies
 
-bytes = { workspace = true }
-chrono = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 clap_derive = { workspace = true }
-futures-util = { workspace = true }
+config = { workspace = true, features = ["yaml"] }
+dir-size = { workspace = true }
 getset = { workspace = true }
-itertools = { workspace = true }
-object_store = { workspace = true, features = ["aws", "azure", "gcp", "http"] }
-polars = { workspace = true, features = ["lazy", "parquet", "csv", "json", "polars-lazy", "streaming", "cloud", "aws", "azure", "gcp", "cloud_write"] }
-reqwest = { workspace = true }
+ignore = { workspace = true }
+indexmap = { workspace = true }
+num-format = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
-testdir = { workspace = true }
+sysinfo = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
-url = { workspace = true, features = ["serde"] }
-wildmatch = { workspace = true }
-
-[dev-dependencies]
-td-common = { workspace = true, features = ["td-test"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { workspace = true, features = ["vendored"] }
-
