--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -204,12 +204,16 @@ jobs:
       TRANSPORTER_AZURE_ACCOUNT_KEY: ${{ secrets.TRANSPORTER_AZURE_ACCOUNT_KEY }}
       TRANSPORTER_AZURE_ACCOUNT_NAME: ${{ secrets.TRANSPORTER_AZURE_ACCOUNT_NAME }}
       SALESFORCE_INSTANCE_URL: ${{ secrets.SALESFORCE_INSTANCE_URL }}
-      SALESFORCE_USERNAME: ${{ secrets.SALESFORCE_USERNAME }}
       SALESFORCE_PASSWORD: ${{ secrets.SALESFORCE_PASSWORD }}
       SALESFORCE_SECURITY_TOKEN: ${{ secrets.SALESFORCE_SECURITY_TOKEN }}
+      SALESFORCE_USERNAME: ${{ secrets.SALESFORCE_USERNAME }}
       TD_SNOWFLAKE_ACCOUNT: ${{ secrets.TD_SNOWFLAKE_ACCOUNT }}
+      TD_SNOWFLAKE_DATABASE: ${{ secrets.TD_SNOWFLAKE_DATABASE }}
+      TD_SNOWFLAKE_PAT: ${{ secrets.TD_SNOWFLAKE_PAT }}
+      TD_SNOWFLAKE_ROLE: ${{ secrets.TD_SNOWFLAKE_ROLE }}
+      TD_SNOWFLAKE_SCHEMA: ${{ secrets.TD_SNOWFLAKE_SCHEMA }}
       TD_SNOWFLAKE_USER: ${{ secrets.TD_SNOWFLAKE_USER }}
-      TD_SNOWFLAKE_PASSWORD: ${{ secrets.TD_SNOWFLAKE_PASSWORD }}
+      TD_SNOWFLAKE_WAREHOUSE: ${{ secrets.TD_SNOWFLAKE_WAREHOUSE }}
     with:
       job_timeout: ${{ fromJson(needs.cap-job.outputs.job_timeout) }}
       td_product: "standard"
